<resources>
    <string name="app_name">ISCATask</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="menu">Menu</string>
    <string name="call">Call</string>
    <string name="search">Search</string>
    <string name="basket">Basket</string>
    <string name="category_item">Category Item</string>
    <string name="men">MEN</string>
    <string name="women">WOMEN</string>
    <string name="kids">KIDS</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="list_image">List Image</string>
    <string name="add_cart">Add Cart</string>
    <string name="like">Like</string>
    <string name="rotate">Rotate</string>
    <string name="new_item">New</string>
    <string name="sale_format">%d%%</string>
    <string name="price_format">$ %s</string>
    <string name="title_activity_detail">DetailActivity</string>
</resources>
